--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   cursor: pointer;
 }
+input{
+outline: none;
+}
 a{
   text-decoration: none !important;
   cursor: pointer !important;
@@ -45,8 +48,8 @@ hr {
   justify-content: space-between !important;
 }
 .webPageContainer {
-  height: 100%; 
-  width: 100vw;
+  /* height: 100%; 
+  width: 100vw; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,6 +62,7 @@ hr {
 }
 .crudBoxcontainer {
   height: 380px;
+  width: 70%;
   margin: 15px;
 }
 .crudBoxcontainer > div {
@@ -80,4 +84,25 @@ td {
 tr {
   border-bottom: 2px solid #333;
   text-align: center;
+}
+/* Extra Small Devices*/
+@media only screen and (max-width:575px){
+.crudBoxcontainer{
+  width: 100%;
+}
+/* tr,thead,th{
+  font-size: 12px;
+  text-align: center;
+} */
+.crudTableContainer{
+  width: 100%;
+}
+.tableHeader>tr>th{
+  text-align: center !important;
+  width: 50px;
+  font-size: 12px;
+}
+.crudTableContainer{
+  height: 150px;
+}
 }
